--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Architect theme
-description: Architect is a theme for GitHub Pages.
+title: 路漫漫其修远兮 ...
+description: lilongen的站
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-architect
