--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: 路漫漫其修远兮 ...
-description: lilongen的站
+title: 路漫漫其修远兮... ...
+description: 蹉跎岁月, 日积月累
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-architect
+theme: jekyll-theme-cayman
